--- a/计算机视觉/SSD.ipynb
+++ b/计算机视觉/SSD.ipynb
@@ -119,7 +119,7 @@
     "        fig.add_patch(rect)\n",
     "    fig.axes.get_xaxis().set_visible(False)\n",
     "    fig.axes.get_yaxis().set_visible(False)\n",
-    "plt.show\n"
+    "plt.show"
    ]
   },
   {
@@ -160,7 +160,7 @@
     "print(boxes.shape)\n",
     "# The first anchor box centered on (20, 20)\n",
     "# its format is (x_min, y_min, x_max, y_max)\n",
-    "boxes[20, 20, 0, :]\n"
+    "boxes[20, 20, 0, :]"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "anchors = boxes[20, 20, :, :]\n",
     "for i in range(anchors.shape[0]):\n",
     "    plt.gca().add_patch(bbox_to_rect(anchors[i,:]*n, colors[i]))\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -222,7 +222,7 @@
     "    return pred.transpose(axes=(0,2,3,1)).flatten()\n",
     "\n",
     "def concat_predictions(preds):\n",
-    "    return nd.concat(*preds, dim=1)\n"
+    "    return nd.concat(*preds, dim=1)"
    ]
   },
   {
@@ -336,9 +336,7 @@
     "        \n",
     "        # it is better to have class predictions reshaped for softmax computation\n",
     "        class_preds = class_preds.reshape(shape=(0, -1, self.num_classes+1))\n",
-    "        return anchors, class_preds, box_preds\n",
-    "\n",
-    "        "
+    "        return anchors, class_preds, box_preds"
    ]
   },
   {
@@ -349,7 +347,6 @@
     {
      "ename": "NameError",
      "evalue": "name 'downsamplers' is not defined",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -357,7 +354,8 @@
       "\u001b[0;32m<ipython-input-43-7eb33b809743>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, num_classes, verbose, **kwargs)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname_scope\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoy_ssd_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_anchors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_classes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfword\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m<ipython-input-41-b0d9aff77388>\u001b[0m in \u001b[0;36mtoy_ssd_model\u001b[0;34m(num_anchors, num_classes)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbody\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdownsamplers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_predictors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbox_predictors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'downsamplers' is not defined"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -376,14 +374,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -395,7 +397,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -406,5 +408,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
